--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     padding: 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    position: relative;
 }
 button[type="button"]{
     width: 10rem;
@@ -25,4 +26,35 @@ button[type="button"]{
     height: 7rem;
     width: 7rem;
     font-size: larger;
+}
+.winner_displayer{
+   width: 60%;
+   height: 30rem;
+    background-color: #e90a4d;
+    /* margin: 0 auto; */
+    position: absolute;
+    top: 10%;
+    left: 18%;
+    border-radius: 10px;
+    /* position: relative; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    z-index: -9999;
+}
+.winner_name{
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 900;
+}
+.text{
+    font-size: 3rem;
+    color: #fff;
+    font-weight: 900;
+}
+img{
+    width: 24rem;
+    height: 24rem;
+    
 }
