--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body{
     background: linear-gradient(to bottom right, #65B741, #C1F2B0);
     height: 100vh;
    
+   
 }
+/* .container{
+    max-width: 10rem;
+} */
 .grid_container{
     margin: 0 auto;
     margin-top: 4rem;
@@ -122,4 +126,72 @@ input[type="text"]{
 .replay{
     opacity: 0;
     z-index: -9999;
+}
+
+
+/* media query */
+@media screen and (max-width: 900px) {
+
+    .uni_in{
+        margin-bottom: 2rem;
+        position: absolute;
+        left: 3% ;
+        top: 20%;
+    }
+    .uni_in2{
+       
+        position: absolute;
+        left: 3% ;
+        top: 30%;
+    }
+    .input_container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .play{
+       
+        position: absolute;
+        top: 69%;
+        left: 13%;
+        
+    }
+    .grid_container{
+        /* margin: 0 auto; */
+      
+        margin-left: 27rem;
+        
+       
+    }
+    .winner_displayer{
+        width: 80%;
+        height: 30rem;
+        left: 10%;
+     }
+     .text{
+        font-size: 2rem;
+        color: #555;
+        font-weight: 900;
+    }
+   
+
+}
+@media screen and (max-width:680px){
+
+    .grid_container{
+        /* margin: 0 auto; */
+      
+        margin-left: 27rem;
+        width: 30rem;
+        height: 30rem;
+        margin-top: 12rem;
+       
+    }
+    button[type="button"]{
+        width: 5rem;
+        height: 7rem;
+        font-size: 3rem;
+       
+    
+    }
 }
