--- a/style.css
+++ b/style.css
@@ -194,4 +194,60 @@ input[type="text"]{
        
     
     }
+    .play{
+       
+        position: absolute;
+        top: 80%;
+        left: 18%;
+        height: 4rem;
+        font-size: 2rem;
+        
+    }
+    .uni_in{
+        margin-bottom: 9rem;
+        position: absolute;
+        left: 3% ;
+        top: 20%;
+    }
+    .uni_in2{
+       
+        position: absolute;
+        left: 3% ;
+        top: 40%;
+    }
+}
+@media screen and (max-width:586px){
+    .uni_in{
+        margin-bottom: 9rem;
+        position: absolute;
+        left: 3% ;
+        top: 10%;
+        
+    }
+    .uni_in2{
+       
+        position: absolute;
+        left: 43% ;
+        top: 10%;
+        margin-left: 4rem;
+    }
+
+    .grid_container{
+        /* margin: 0 auto; */
+      
+        margin-left: 12rem;
+        width: 30rem;
+        height: 30rem;
+        margin-top: 12rem;
+       
+    }
+    .play{
+       
+        position: absolute;
+        top: 80%;
+        left: 48%;
+        height: 4rem;
+        font-size: 2rem;
+        
+    }
 }
