--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     position: relative;
     border: 2px solid #fff;
     border-radius: 10px;
+    padding-left: 5rem;
 }
 button[type="button"]{
     width: 7rem;
@@ -218,18 +219,19 @@ input[type="text"]{
 }
 @media screen and (max-width:586px){
     .uni_in{
-        margin-bottom: 9rem;
-        position: absolute;
-        left: 3% ;
-        top: 10%;
-        
-    }
-    .uni_in2{
-       
         position: absolute;
         left: 43% ;
         top: 10%;
         margin-left: 4rem;
+        
+    }
+    .uni_in2{
+        margin-bottom: 9rem;
+        position: absolute;
+        left: 3% ;
+        top: 10%;
+
+       
     }
 
     .grid_container{
@@ -271,5 +273,29 @@ input[type="text"]{
     }
 }
 @media screen and (max-width:550px){
-
+    .uni_in{
+        width: 0.2rem;   
+    }
+    .uni_in2{
+       width: 0.3rem;
+    }
+    .grid_container{
+        /* margin: 0 auto; */
+      
+        margin-left: 7rem;
+        width: 30rem;
+        height: 30rem;
+        margin-top: 20rem;
+       
+    }
+    .play{
+       
+        position: absolute;
+        top: 95%;
+        left: 48%;
+        height: 4rem;
+        font-size: 2rem;
+        
+    }
+    
 }
